2013-02-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac (with_dfp): Add power8 cpu target.
	* configure: Regenerated.
	* sysdeps/powerpc/powerpc64/power8/fpu/Implies: Fix implie.

2013-02-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power6/fpu/trunctdsd2.S
	(__dpd_trunctdsd2): Add hidden_def.
	* sysdeps/powerpc/powerpc64/power6/fpu/trunctdsd2.S: Update Copyright
	years.

2013-02-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfp/math.h (DEC_NAN): Define __builtin_nan.

2013-02-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac (AC_PROG_CC): Using withou argument. Also remove hack
	to use the one specified with PATH.
	(AC_PROG_CXX): Likewise.
	* configure: Regenerated.

2013-02-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac (submachine_opt): Rename to libdfp_cv_submachine_opt to
	work correctly with AC_CACHE_CHECK.
	* Makefile.in (submachine_opt): Likewise.
	* config/override.m4: Remove the need to use autoconf 2.59.
	* configure: Regenerated using autoconf 2.68.
	* config.h.in: Likewise.
	* libdecnumber/configure: Likewise.

2013-02-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add NOT_IN_libdf when building tests.
	* base-math/extenddfdd.c (extenddfdd): Add hidden_def definition.
	* base-math/extenddftd.c (extenddftd): Likewise.
	* base-math/extendsddf.c (extendsddf): Likewise.
	* base-math/truncdddf.c (truncdddf): Likewise.
	* base-math/truncdddf.c (truncdddf): Likewise.
	* base-math/truncdfsd.c (truncdfsd): Likewise.
	* base-math/trunctddf.c (trunctddf): Likewise.
	* base-math/trunctdsd2.c (trunctdsd2): Likewise.
	* sysdeps/powerpc/powerpc64/power6/fpu/trunctdsd2.S (trunctdsd2):
	Likewise.
	* include/libdfp-symbols.h (strong_alias): Add macro for assembly.
	(hidden_def): Likewise.
	(hidden_weak): Likewise.
	(hidden_ver): Likewise.
	(hidden_data_def): Likewise.
	(hidden_data_weak): Likewise.